# lunch_spot

./: .env-example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflow/: ruff.yml
lunch_spot_app/app/: urls.py
lunch_spot_app/app/admin/: __init__.py  dish.py  employee.py  menu.py  polls.py  restaurant.py
lunch_spot_app/app/migrations/: 0001_initial.py
lunch_spot_app/app/models/: __init__.py  dish.py  employee.py  menu.py  polls.py  restaurant.py
lunch_spot_app/app/serializer/: __init__.py  dish.py  employee.py  menu.py  polls.py  restaurant.py
lunch_spot_app/app/views/: employee.py  menu.py  polls.py  restaurant.py
lunch_spot_app/config/: settings.py
